# biometric-iot-bridge-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: bionics_iot_test.yml
src/: main_server.py
tests/: test_iot_guard.py
